--- a/network/build.gradle
+++ b/network/build.gradle
@@ -4,18 +4,22 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
-    compileSdkVersion 28
-
-
+    compileSdkVersion project.ext.compileSdk
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion project.ext.minSdk
+        targetSdkVersion project.ext.targetSdk
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "CLIENT_ID", "\"$ITAD_CLIENT_ID\"")
+        buildConfigField("String", "CLIENT_SECRET", "\"$ITAD_CLIENT_SECRET\"")
+        buildConfigField("String", "API_KEY", "\"$ITAD_API_KEY\"")
 
     }
 
@@ -31,7 +35,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation("com.squareup.okio:okio:1.16.0")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "org.koin:koin-core:${versions.koin}"
@@ -39,6 +48,10 @@ dependencies {
 
     implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
     implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
 
+    testImplementation "org.koin:koin-test:${versions.koin}"
+    testImplementation "com.google.truth:truth:0.42"
     testImplementation 'junit:junit:4.12'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
 }
