--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     implementation "org.koin:koin-android:${versions.koin}"
     implementation "org.koin:koin-core:${versions.koin}"
 
