--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     implementation "com.mikepenz:materialdrawer:6.1.1"
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation "org.koin:koin-core:${versions.koin}"
     implementation "org.koin:koin-core-ext:${versions.koin}"
