--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ ext.versions = [
     'coroutines': '1.0.1',
     'room': '2.1.0-alpha03',
     'truth': '0.42',
-    'mockito_kotlin': '2.0.0'
+    'mockito_kotlin': '2.0.0',
+    'timber': '4.7.1'
 ]
 
 allprojects {
