--- a/data/build.gradle
+++ b/data/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation "org.koin:koin-android:${versions.koin}"
     implementation "org.koin:koin-core:${versions.koin}"
