Add commonproviders module

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ android.enableJetifier=true
 org.gradle.configureondemand=true
 org.gradle.console=rich
 org.gradle.parallel=true
+android.enableUnitTestBinaryResources=true
