--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation "androidx.appcompat:appcompat:${versions.androidx_appcompat}"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
