--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,10 @@ ext.versions = [
     'room': '2.1.0-alpha03',
     'truth': '0.42',
     'mockito_kotlin': '2.0.0',
-    'timber': '4.7.1'
+    'timber': '4.7.1',
+    'androidx_appcompat': '1.1.0-alpha01',
+    'androidx_core': '1.1.0-alpha02',
+    'robolectric': '4.1-beta-2'
 ]
 
 allprojects {
