--- a/commonproviders/build.gradle
+++ b/commonproviders/build.gradle
@@ -29,7 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.core:core:${versions.androidx_appcompat}"
+    implementation "androidx.core:core:${versions.androidX}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
