Implement UI state machine

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ ext.versions = [
     'timber': '4.7.1',
     'livedata': '2.0.0',
     'androidX': '1.1.0-alpha01',
+    'material': '1.1.0-alpha02',
     'robolectric': '4.1-beta-2'
 ]
 
