--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 android {
     compileSdkVersion project.ext.compileSdk
     defaultConfig {
@@ -34,13 +38,14 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:${versions.androidX}"
     implementation "android.arch.navigation:navigation-fragment-ktx:${versions.nav_version}"
     implementation "android.arch.navigation:navigation-ui-ktx:${versions.nav_version}"
-    implementation "com.google.android.material:material:${versions.androidX}"
+    implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "com.mikepenz:materialdrawer:6.1.1"
 
+    implementation 'com.github.tinder:statemachine:0.1.2'
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation "org.koin:koin-core:${versions.koin}"
