--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-android-extensions'
+
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -23,6 +25,10 @@ android {
         }
     }
 
+}
+
+androidExtensions {
+    experimental = true
 }
 
 dependencies {
