--- a/network/build.gradle
+++ b/network/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "org.koin:koin-core:${versions.koin}"
+    implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
