--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.11'
+    ext.nav_version = '1.0.0-alpha09'
     repositories {
         google()
         jcenter()
@@ -10,7 +11,7 @@ buildscript {
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,7 +28,7 @@ allprojects {
 ext.versions = [
     'okhttp' : '3.12.0',
     'retrofit' : '2.5.0',
-    'nav_version': '1.0.0-alpha09',
+    'nav_version': nav_version,
     'paging_version': '2.1.0-rc01',
     'koin': '1.0.2',
     'coroutines': '1.1.0',
