--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
 
+    implementation 'com.github.stfalcon:stfalcon-imageviewer:0.1.0'
     implementation ("com.github.bumptech.glide:glide:${versions.glide}") {
         exclude group: "com.android.support"
     }
