--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui-ktx:${versions.nav_version}"
     implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
-
+    implementation 'androidx.core:core-ktx:1.0.1'
+    
     implementation 'com.github.stfalcon:stfalcon-imageviewer:0.1.0'
     implementation ("com.github.bumptech.glide:glide:${versions.glide}") {
         exclude group: "com.android.support"
