--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,13 @@ dependencies {
     implementation ("com.github.bumptech.glide:glide:${versions.glide}") {
         exclude group: "com.android.support"
     }
-    implementation "com.github.bumptech.glide:okhttp3-integration:${versions.glide}"
+    implementation ("com.github.bumptech.glide:okhttp3-integration:${versions.glide}") {
+        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+    }
+    implementation ("com.squareup.okhttp3:okhttp:${versions.okhttp}") {
+        because 'Glide okhttp integration needs this.'
+    }
+    implementation("com.squareup.okio:okio:${versions.okio}")
     kapt "com.github.bumptech.glide:compiler:${versions.glide}"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
