--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
 ext.versions = [
     'okhttp' : '3.12.0',
     'retrofit' : '2.5.0',
+    'okio': '2.1.0',
     'nav_version': nav_version,
     'paging_version': '2.1.0-rc01',
     'koin': '1.0.2',
