--- a/network/build.gradle
+++ b/network/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
     implementation "com.squareup.moshi:moshi:1.8.0"
-    implementation("com.squareup.okio:okio:1.16.0")
+    implementation("com.squareup.okio:okio:${versions.okio}")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
