Setup Proguard to work with release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,15 @@ android {
     }
     
     buildTypes {
-        release {
-            minifyEnabled false
+        debug {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles fileTree('proguard-rules').asList().toArray()
+        }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles fileTree('proguard-rules').asList().toArray()
         }
     }
 }
