--- a/network/build.gradle
+++ b/network/build.gradle
@@ -35,12 +35,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
+    implementation 'se.ansman.kotshi:api:1.0.6'
+    kapt 'se.ansman.kotshi:compiler:1.0.6'
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation("com.squareup.okio:okio:${versions.okio}")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "org.koin:koin-android:${versions.koin}"
