--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,13 +27,8 @@ android {
 
         buildConfigField("Integer", "DEFAULT_PAGE_SIZE", "20")
     }
-    
+
     buildTypes {
-        debug {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            proguardFiles fileTree('proguard-rules').asList().toArray()
-        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -47,11 +42,9 @@ androidExtensions {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation 'androidx.multidex:multidex:2.0.1'
-
     implementation "androidx.appcompat:appcompat:${versions.androidX}"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation "androidx.lifecycle:lifecycle-viewmodel:${versions.lifecycle}"
@@ -62,41 +55,33 @@ dependencies {
     implementation "com.google.android.material:material:${versions.material}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
     implementation 'androidx.core:core-ktx:1.0.1'
-    
     implementation 'com.github.stfalcon:stfalcon-imageviewer:0.1.0'
-    implementation ("com.github.bumptech.glide:glide:${versions.glide}") {
+    implementation("com.github.bumptech.glide:glide:${versions.glide}") {
         exclude group: "com.android.support"
     }
-    implementation ("com.github.bumptech.glide:okhttp3-integration:${versions.glide}") {
+    implementation("com.github.bumptech.glide:okhttp3-integration:${versions.glide}") {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
-    implementation ("com.squareup.okhttp3:okhttp:${versions.okhttp}") {
+    implementation("com.squareup.okhttp3:okhttp:${versions.okhttp}") {
         because 'Glide okhttp integration needs this.'
     }
-    implementation("com.squareup.okio:okio:${versions.okio}")
+    implementation "com.squareup.okio:okio:${versions.okio}"
     kapt "com.github.bumptech.glide:compiler:${versions.glide}"
-
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
-
-    implementation "com.mikepenz:materialdrawer:6.1.1"
-
+    implementation 'com.mikepenz:materialdrawer:6.1.1'
     implementation 'com.github.tinder:statemachine:0.1.2'
     implementation "com.jakewharton.timber:timber:${versions.timber}"
-
     implementation "org.koin:koin-core:${versions.koin}"
     implementation "org.koin:koin-core-ext:${versions.koin}"
     implementation "org.koin:koin-android:${versions.koin}"
     implementation "org.koin:koin-androidx-scope:${versions.koin}"
     implementation "org.koin:koin-androidx-viewmodel:${versions.koin}"
-
     implementation project(':commonproviders')
     implementation project(':domain')
-
     testImplementation 'junit:junit:4.12'
     testImplementation "org.koin:koin-test:${versions.koin}"
     testImplementation "androidx.paging:paging-common-ktx:${versions.paging_version}"
-
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
