--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext.versions = [
     'okhttp' : '3.12.0',
     'retrofit' : '2.5.0',
     'okio': '2.1.0',
+    'acra': '5.2.1',
     'nav_version': nav_version,
     'paging_version': '2.1.0-rc01',
     'koin': '1.0.2',
