--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
     implementation "androidx.recyclerview:recyclerview:${versions.androidX}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
+    implementation "androidx.annotation:annotation:1.0.1"
     implementation 'androidx.core:core-ktx:1.0.1'
 
     implementation "android.arch.navigation:navigation-fragment-ktx:${versions.nav_version}"
@@ -85,7 +86,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
 
     implementation 'com.mikepenz:materialdrawer:6.1.1'
     implementation 'com.github.tinder:statemachine:0.1.2'
@@ -104,6 +104,7 @@ dependencies {
     testImplementation "org.koin:koin-test:${versions.koin}"
     testImplementation "androidx.paging:paging-common-ktx:${versions.paging_version}"
 
+    androidTestImplementation "androidx.test:rules:1.1.1"
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
