--- a/data/build.gradle
+++ b/data/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     kapt "androidx.room:room-compiler:${versions.room}"
     implementation "androidx.lifecycle:lifecycle-livedata:${versions.lifecycle}"
     implementation "androidx.room:room-rxjava2:${versions.room}"
-    implementation "androidx.room:room-coroutines:${versions.room}"
+    implementation ("androidx.room:room-coroutines:${versions.room}") {
+        exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
+    }
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:${versions.coroutines}"
