--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,6 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs"
 
-repositories {
-    maven { url "https://jitpack.io" }
-}
-
 android {
     compileSdkVersion project.ext.compileSdk
     defaultConfig {
@@ -87,7 +83,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
-    implementation 'com.mikepenz:materialdrawer:6.1.1'
+    implementation 'com.mikepenz:materialdrawer:6.1.2'
     implementation 'com.github.tinder:statemachine:0.1.2'
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
@@ -102,6 +98,8 @@ dependencies {
     implementation project(':domain')
 
     testImplementation project(':commontest')
+    testImplementation 'com.jraska.livedata:testing:0.6.0'
+    testImplementation 'com.jraska.livedata:testing-ktx:0.6.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
     testImplementation "androidx.arch.core:core-testing:2.0.0"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
