Write the database layer for the Watchlist

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,6 +21,10 @@ android {
         multiDexEnabled true
     }
 
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
+
     buildTypes {
         release {
             minifyEnabled false
