--- a/workers/build.gradle
+++ b/workers/build.gradle
@@ -11,7 +11,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -24,13 +25,29 @@ android {
 }
 
 dependencies {
+    implementation project(':commonproviders')
+    implementation project(':common')
     implementation project(':domain')
-    implementation ("android.arch.work:work-runtime:${versions.workmanager}")
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+    implementation "com.jakewharton.timber:timber:${versions.timber}"
+
     implementation ("android.arch.work:work-runtime-ktx:${versions.workmanager}") {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
+        exclude group: 'com.google.guava', module: 'listenablefuture'
     }
     implementation "org.koin:koin-core:${versions.koin}"
     implementation "org.koin:koin-android:${versions.koin}"
 
-    androidTestImplementation "android.arch.work:work-testing:${versions.workmanager}"
+    androidTestImplementation 'org.mockito:mockito-android:2.23.4'
+    androidTestImplementation project(":commontest")
+    androidTestImplementation "androidx.test.ext:junit:1.1.0"
+    androidTestImplementation "com.google.truth:truth:${versions.truth}"
+    androidTestImplementation ("org.koin:koin-test:${versions.koin}") { exclude group: 'org.mockito' }
+    androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation ("android.arch.work:work-testing:${versions.workmanager}")  {
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+    }
 }
