Add region, countries and currencies to the Watchee model.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     implementation "org.koin:koin-android:${versions.koin}"
     implementation "org.koin:koin-core:${versions.koin}"
+    implementation project(':common')
 
     testImplementation "org.koin:koin-test:${versions.koin}"
     testImplementation "com.google.truth:truth:${versions.truth}"
