--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation project(':network')
     implementation "org.koin:koin-core:${versions.koin}"
 
+    testImplementation project(':commontest')
     testImplementation project(':commonproviders')
     testImplementation "org.koin:koin-test:${versions.koin}"
     testImplementation "com.google.truth:truth:${versions.truth}"
