--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
+    implementation 'com.mikepenz:fastadapter-extensions:3.3.1'
     implementation 'com.mikepenz:materialdrawer:6.1.2'
     implementation 'com.github.tinder:statemachine:0.1.2'
     implementation "com.jakewharton.timber:timber:${versions.timber}"
