--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".watchlist.shortcut.ShortcutCreatedBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_SHORTCUT"/>
+            </intent-filter>
+        </receiver>
+
         <activity
                 android:name=".common.acra.ErrorActivity"
                 android:label="@string/title_submit_error_report"/>
