--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.github.ben-manes.versions" version "0.20.0"
+}
+
 allprojects {
     project.ext {
         minSdk = 19
@@ -26,7 +30,7 @@ allprojects {
 }
 
 ext.versions = [
-    'okhttp' : '3.12.0',
+    'okhttp' : '3.12.1',
     'retrofit' : '2.5.0',
     'okio': '2.1.0',
     'acra': '5.2.1',
@@ -40,7 +44,9 @@ ext.versions = [
     'timber': '4.7.1',
     'lifecycle': '2.0.0',
     'glide': '4.8.0',
-    'androidX': '1.1.0-alpha01',
+    'appCompat': '1.1.0-alpha01',
+    'recyclerView': '1.1.0-alpha01',
+    'androidX': '1.1.0-alpha03',
     'material': '1.1.0-alpha02',
     'robolectric': '4.1',
     'workmanager': '1.0.0-beta01'
