--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,14 @@ dependencies {
 
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.appcompat:appcompat:${versions.androidX}"
+    implementation "androidx.appcompat:appcompat:${versions.appCompat}"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation "androidx.lifecycle:lifecycle-viewmodel:${versions.lifecycle}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
-    implementation "androidx.recyclerview:recyclerview:${versions.androidX}"
+    implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
     implementation "androidx.annotation:annotation:1.0.1"
-    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation "androidx.core:core-ktx:${versions.androidX}"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:${versions.nav_version}"
     implementation "android.arch.navigation:navigation-ui-ktx:${versions.nav_version}"
@@ -105,8 +105,8 @@ dependencies {
     implementation project(':domain')
 
     testImplementation project(':commontest')
-    testImplementation 'com.jraska.livedata:testing:0.6.0'
-    testImplementation 'com.jraska.livedata:testing-ktx:0.6.0'
+    testImplementation 'com.jraska.livedata:testing:1.0.0'
+    testImplementation 'com.jraska.livedata:testing-ktx:1.0.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
     testImplementation "androidx.arch.core:core-testing:2.0.0"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
