--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ org.gradle.configureondemand=true
 org.gradle.console=rich
 org.gradle.parallel=true
 android.enableUnitTestBinaryResources=true
+android.enableR8=true
