--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.20'
-    ext.nav_version = '1.0.0-alpha11'
+    ext.kotlin_version = '1.3.21'
+    ext.nav_version = '1.0.0-beta01'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
@@ -35,7 +35,7 @@ ext.versions = [
     'okio': '2.1.0',
     'acra': '5.2.1',
     'nav_version': nav_version,
-    'paging_version': '2.1.0-rc01',
+    'paging_version': '2.1.0',
     'koin': '1.0.2',
     'coroutines': '1.1.1',
     'room': '2.1.0-alpha03',
@@ -45,12 +45,12 @@ ext.versions = [
     'lifecycle': '2.0.0',
     'glide': '4.8.0',
     'mockk': '1.9',
-    'appCompat': '1.1.0-alpha01',
-    'recyclerView': '1.1.0-alpha01',
-    'androidX': '1.1.0-alpha03',
-    'material': '1.1.0-alpha02',
+    'appCompat': '1.1.0-alpha02',
+    'recyclerView': '1.1.0-alpha02',
+    'androidX': '1.1.0-alpha04',
+    'material': '1.1.0-alpha03',
     'robolectric': '4.1',
-    'workmanager': '1.0.0-beta01'
+    'workmanager': '1.0.0-beta05'
 ]
 
 allprojects {
