--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,20 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
-    ext.nav_version = '1.0.0-rc02'
+    ext.nav_version = '2.0.0-rc02'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.20.0"
+    id "com.github.ben-manes.versions" version "0.21.0"
 }
 
 allprojects {
@@ -32,25 +32,25 @@ allprojects {
 ext.versions = [
     'okhttp' : '3.12.1',
     'retrofit' : '2.5.0',
-    'okio': '2.1.0',
+    'okio': '2.2.2',
     'acra': '5.2.1',
     'nav_version': nav_version,
     'paging_version': '2.1.0',
     'koin': '1.0.2',
     'coroutines': '1.1.1',
     'room': '2.1.0-alpha04',
-    'truth': '0.42',
-    'mockito_kotlin': '2.0.0',
+    'truth': '0.43',
+    'mockito_kotlin': '2.1.0',
     'timber': '4.7.1',
     'lifecycle': '2.0.0',
-    'glide': '4.8.0',
-    'mockk': '1.9',
+    'glide': '4.9.0',
+    'mockk': '1.9.2',
     'appCompat': '1.1.0-alpha02',
     'recyclerView': '1.1.0-alpha02',
     'androidX': '1.1.0-alpha04',
     'material': '1.1.0-alpha04',
     'robolectric': '4.2',
-    'workmanager': '1.0.0-rc02'
+    'workmanager': '2.0.0-rc01'
 ]
 
 allprojects {
