--- a/network/build.gradle
+++ b/network/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
 
     testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "com.google.truth:truth:0.42"
+    testImplementation "com.google.truth:truth:${versions.truth}"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
 }
