--- a/commontest/build.gradle
+++ b/commontest/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 
     api "io.mockk:mockk:${versions.mockk}"
     api "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
-    api "com.google.truth:truth:${versions.truth}"
+    api "org.assertj:assertj-core:${versions.assertj}"
 }
 
 sourceCompatibility = "7"
