--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     testImplementation project(':commontest')
     testImplementation project(':commonproviders')
     testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "com.google.truth:truth:${versions.truth}"
+    testImplementation "org.assertj:assertj-core:${versions.assertj}"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
 }
