--- a/data/build.gradle
+++ b/data/build.gradle
@@ -63,13 +63,13 @@ dependencies {
     implementation project(':common')
 
     testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "com.google.truth:truth:${versions.truth}"
+    testImplementation "org.assertj:assertj-core:${versions.assertj}"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
 
     androidTestImplementation "androidx.test.ext:junit:1.1.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    androidTestImplementation "com.google.truth:truth:${versions.truth}"
+    androidTestImplementation "org.assertj:assertj-core:${versions.assertj}"
     androidTestImplementation "org.koin:koin-test:${versions.koin}"
     androidTestImplementation "androidx.room:room-testing:${versions.room}"
     androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
