--- a/workers/build.gradle
+++ b/workers/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-android:2.25.0'
     androidTestImplementation project(":commontest")
     androidTestImplementation "androidx.test.ext:junit:1.1.0"
-    androidTestImplementation "com.google.truth:truth:${versions.truth}"
+    androidTestImplementation "org.assertj:assertj-core:${versions.assertj}"
     androidTestImplementation ("org.koin:koin-test:${versions.koin}") { exclude group: 'org.mockito' }
     androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
     androidTestImplementation 'androidx.test:runner:1.1.1'
