--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
-    ext.nav_version = '2.0.0-rc02'
+    ext.nav_version = '2.0.0'
     repositories {
         google()
         jcenter()
@@ -50,7 +50,7 @@ ext.versions = [
     'androidX': '1.1.0-alpha04',
     'material': '1.1.0-alpha04',
     'robolectric': '4.2',
-    'workmanager': '2.0.0-rc01'
+    'workmanager': '2.0.0'
 ]
 
 allprojects {
