--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,12 +60,12 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation "androidx.lifecycle:lifecycle-viewmodel:${versions.lifecycle}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
     implementation "androidx.recyclerview:recyclerview:${versions.recyclerView}"
     implementation "androidx.paging:paging-runtime-ktx:${versions.paging_version}"
-    implementation "androidx.annotation:annotation:1.0.2"
+    implementation "androidx.annotation:annotation:1.1.0"
     implementation "androidx.core:core-ktx:${versions.androidX}"
 
     implementation "androidx.navigation:navigation-fragment-ktx:${versions.nav_version}"
@@ -111,20 +111,20 @@ dependencies {
     testImplementation 'com.jraska.livedata:testing:1.1.0'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
-    testImplementation "androidx.arch.core:core-testing:2.0.0"
+    testImplementation "androidx.arch.core:core-testing:2.0.1"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
     testImplementation "org.koin:koin-test:${versions.koin}"
-    testImplementation "androidx.test:core:1.1.0"
+    testImplementation "androidx.test:core:1.2.0"
     testImplementation "androidx.paging:paging-common-ktx:${versions.paging_version}"
 
-    androidTestUtil 'androidx.test:orchestrator:1.1.1'
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation project(':commontest')
-    androidTestImplementation "androidx.test:rules:1.1.1"
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation "androidx.test:rules:1.2.0"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
 configurations.all {
