--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.31'
     ext.nav_version = '2.0.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
@@ -37,18 +37,18 @@ ext.versions = [
     'nav_version': nav_version,
     'paging_version': '2.1.0',
     'koin': '1.0.2',
-    'coroutines': '1.1.1',
-    'room': '2.1.0-alpha04',
+    'coroutines': '1.2.1',
+    'room': '2.1.0',
     'assertj': '2.9.1',
     'mockito_kotlin': '2.1.0',
     'timber': '4.7.1',
     'lifecycle': '2.0.0',
     'glide': '4.9.0',
     'mockk': '1.9.2',
-    'appCompat': '1.1.0-alpha02',
-    'recyclerView': '1.1.0-alpha02',
-    'androidX': '1.1.0-alpha04',
-    'material': '1.1.0-alpha05',
+    'appCompat': '1.1.0-beta01',
+    'recyclerView': '1.1.0-alpha06',
+    'androidX': '1.2.0-alpha02',
+    'material': '1.1.0-alpha07',
     'robolectric': '4.2',
     'workmanager': '2.0.0'
 ]
