--- a/workers/build.gradle
+++ b/workers/build.gradle
@@ -22,6 +22,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -42,10 +46,10 @@ dependencies {
 
     androidTestImplementation 'org.mockito:mockito-android:2.25.0'
     androidTestImplementation project(":commontest")
-    androidTestImplementation "androidx.test.ext:junit:1.1.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation "org.assertj:assertj-core:${versions.assertj}"
     androidTestImplementation ("org.koin:koin-test:${versions.koin}") { exclude group: 'org.mockito' }
-    androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
-    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
+    androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation ("androidx.work:work-testing:${versions.workmanager}")
 }
