--- a/commonproviders/build.gradle
+++ b/commonproviders/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:${versions.appCompat}"
     implementation "androidx.core:core:${versions.androidX}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "com.jakewharton.timber:timber:${versions.timber}"
