--- a/network/build.gradle
+++ b/network/build.gradle
@@ -30,6 +30,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
@@ -45,7 +50,7 @@ dependencies {
 
     implementation "org.koin:koin-android:${versions.koin}"
     implementation "org.koin:koin-core:${versions.koin}"
-    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
